[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erofs-cibot"
version = "0.1.0"
description = "Standalone OzLabs-to-GitHub bridge for erofs-utils"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",
    "PyJWT>=2.10",
    "requests>=2.32",
]

[project.scripts]
erofs-cibot = "erofs_cibot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["erofs_cibot*"]
